--- a/src/assets/styles/pages/about.scss
+++ b/src/assets/styles/pages/about.scss
@@ -52,6 +52,7 @@
         }
         @include to(575px){
             @include customOffsetWidth(100, var(--offset));
+            order: 0;
         }
     }
     .about-top-block-big {
@@ -70,6 +71,7 @@
         @include to(575px){
             font-size: 18px;
             @include customOffsetWidth(100, var(--offset));
+            // order: 1;
         }
     }
     .about-mini-subtitle {
@@ -100,7 +102,9 @@
         }
         @include to(575px){
             @include customOffsetWidth(100, var(--offset));
+            margin-top: var(--offset);
             margin-bottom: 20px;
+            order: 2;
         }
     }
     .small-text {
@@ -161,6 +165,9 @@
             padding-top: 150px;
             padding-bottom: 150px;
             margin-top: 70px;
+        }
+        @include to(575px){
+            order: 5;
         }
         &:after {
             content: '';
@@ -251,6 +258,11 @@
     .about-block-last {
         display: flex;
         flex-wrap: wrap;
+        @include to(575px){
+            @include to(575px){
+                order: 5;
+            }
+        }
     }
     .about-block-last-uppercased {
         font-size: 22px;
@@ -306,19 +318,15 @@
         padding-bottom: 30%;
         position: relative;
         margin-bottom: var(--offset);
+        
         @include to(950px){
             padding-bottom: 50%;
         }
         @include to(575px){
-            &::after {
-                position: absolute;
-                content: '';
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                background: rgba(255,255,255,0.25);
-            }
+            color: var(--color-grey);
+            display: flex;
+            flex-direction: column-reverse;
+            padding-bottom: 0;
         }       
         img {
             position: absolute;
@@ -328,6 +336,11 @@
             height: 100%;
             object-fit: cover;
             z-index: 0;
+            @include to(575px){
+                position: static;
+                height: 60vw;
+                object-position: right;
+            }
         }
         div {
             position: absolute;
@@ -341,7 +354,13 @@
                 left: var(--page-side-fields);
             }
             @include to(575px){
+                margin-bottom: 20px;
                 width: 90%;
+                transform: none;
+                position: static;
+                &.light {
+                    color: var(--color-grey)
+                }
             }
         }
     }
